Fix: Hovering nav logo caused other nav items to shift

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,8 @@ html, body {
 }
 
 nav {
+    $bg-color: #333;
+
     position: absolute;
     right: 0;
     left: 0;
@@ -16,7 +18,7 @@ nav {
     height: calc(80px - 32px);
     padding: 16px;
     color: white;
-    background-color: #333333;
+    background-color: $bg-color;
 
     ul {
         display: flex;
@@ -26,7 +28,7 @@ nav {
     li {
         display: inline-block;
         padding: 0 16px;
-        border-bottom: solid 2px #333333;
+        border-bottom: solid 2px $bg-color;
     }
 
     li:hover {
@@ -38,7 +40,7 @@ nav {
     }
 
     li:first-of-type:hover {
-        border: 0;
+        border-bottom-color: $bg-color;
     }
 
     a {
